--- a/muldiaolg/src/main/res/values/ids.xml
+++ b/muldiaolg/src/main/res/values/ids.xml
@@ -14,4 +14,6 @@
     <item name="mListLine" type="id" />
     <item name="mListCancel" type="id" />
     <item name="mRecyclerView" type="id" />
+    <!-- 自定义弹框的布局的时候布局的id -->
+    <item name="mulView" type="id" />
 </resources>
