--- a/app/src/main/res/layout/ac_rel_dialog_surr.xml
+++ b/app/src/main/res/layout/ac_rel_dialog_surr.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/dialog_def_bg">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/submit"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -15,9 +15,10 @@
         android:textColor="@color/color_323232"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.AppCompatEditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/content"
         android:layout_width="0dp"
         android:layout_height="42dp"
@@ -53,7 +54,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line1" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/cancel"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -66,7 +67,7 @@
         app:layout_constraintRight_toLeftOf="@id/line2"
         app:layout_constraintTop_toTopOf="@id/line2" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/confirm"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -78,4 +79,4 @@
         app:layout_constraintLeft_toRightOf="@id/line2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/line2" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
