--- a/app/src/main/res/layout/dialog_list_default.xml
+++ b/app/src/main/res/layout/dialog_list_default.xml
@@ -12,7 +12,7 @@
         android:background="@android:color/white"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
